cbits/Bullet.h

void* btCollisionDispatcher_getNewManifold(void *c,void* p0,void* p1); //method: getNewManifold ::btPersistentManifold * ( ::btCollisionDispatcher::* )( void *,void * ) 
void btCollisionDispatcher_dispatchAllCollisionPairs(void *c,void* p0,void* p1,void* p2); //method: dispatchAllCollisionPairs void ( ::btCollisionDispatcher::* )( ::btOverlappingPairCache *,::btDispatcherInfo const &,::btDispatcher * ) 
//not supported method: getInternalManifoldPool ::btPoolAllocator * ( ::btCollisionDispatcher::* )(  ) 
// error:  - unsupported

//not supported method: getInternalManifoldPool ::btPoolAllocator * ( ::btCollisionDispatcher::* )(  ) 
// error:  - unsupported

//not supported method: getInternalManifoldPool ::btPoolAllocator const * ( ::btCollisionDispatcher::* )(  ) const
// error:  - unsupported

int btCollisionDispatcher_needsCollision(void *c,void* p0,void* p1); //method: needsCollision bool ( ::btCollisionDispatcher::* )( ::btCollisionObject *,::btCollisionObject * ) 
void* btCollisionDispatcher_getManifoldByIndexInternal(void *c,int p0); //method: getManifoldByIndexInternal ::btPersistentManifold * ( ::btCollisionDispatcher::* )( int ) 
void* btCollisionDispatcher_getManifoldByIndexInternal0(void *c,int p0); //method: getManifoldByIndexInternal ::btPersistentManifold * ( ::btCollisionDispatcher::* )( int ) 
void* btCollisionDispatcher_getManifoldByIndexInternal1(void *c,int p0); //method: getManifoldByIndexInternal ::btPersistentManifold const * ( ::btCollisionDispatcher::* )( int ) const
//not supported method: setNearCallback void ( ::btCollisionDispatcher::* )( ::btNearCallback ) 
// error:  - unsupported, void - ok

// attribute not supported: //attribute: ::btPoolAllocator * btCollisionDispatcher->m_collisionAlgorithmPoolAllocator
void btCollisionDispatcher_m_collisionConfiguration_set(void *c,void* a); //attribute: ::btCollisionConfiguration * btCollisionDispatcher->m_collisionConfiguration
void* btCollisionDispatcher_m_collisionConfiguration_get(void *c); //attribute: ::btCollisionConfiguration * btCollisionDispatcher->m_collisionConfiguration
void btCollisionDispatcher_m_defaultManifoldResult_set(void *c,void* a); //attribute: ::btManifoldResult btCollisionDispatcher->m_defaultManifoldResult
void* btCollisionDispatcher_m_defaultManifoldResult_get(void *c); //attribute: ::btManifoldResult btCollisionDispatcher->m_defaultManifoldResult
void btCollisionDispatcher_m_dispatcherFlags_set(void *c,int a); //attribute: int btCollisionDispatcher->m_dispatcherFlags
int btCollisionDispatcher_m_dispatcherFlags_get(void *c); //attribute: int btCollisionDispatcher->m_dispatcherFlags
// attribute not supported: //attribute: ::btCollisionAlgorithmCreateFunc *[36][36] btCollisionDispatcher->m_doubleDispatch
void btCollisionDispatcher_m_manifoldsPtr_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btPersistentManifold*> btCollisionDispatcher->m_manifoldsPtr
void* btCollisionDispatcher_m_manifoldsPtr_get(void *c); //attribute: ::btAlignedObjectArray<btPersistentManifold*> btCollisionDispatcher->m_manifoldsPtr
// attribute not supported: //attribute: ::btNearCallback btCollisionDispatcher->m_nearCallback
// attribute not supported: //attribute: ::btPoolAllocator * btCollisionDispatcher->m_persistentManifoldPoolAllocator
void* btCollisionObject_new(); //constructor: btCollisionObject  ( ::btCollisionObject::* )(  ) 
void btCollisionObject_free(void *c);
 
float btCollisionObject_getCcdSquareMotionThreshold(void *c); //method: getCcdSquareMotionThreshold ::btScalar ( ::btCollisionObject::* )(  ) const
void btCollisionObject_activate(void *c,int p0); //method: activate void ( ::btCollisionObject::* )( bool ) 
void btCollisionObject_setInterpolationLinearVelocity(void *c,float* p0); //method: setInterpolationLinearVelocity void ( ::btCollisionObject::* )( ::btVector3 const & ) 
float btCollisionObject_getFriction(void *c); //method: getFriction ::btScalar ( ::btCollisionObject::* )(  ) const
void btCollisionObject_setCompanionId(void *c,int p0); //method: setCompanionId void ( ::btCollisionObject::* )( int ) 
void btCollisionObject_setInterpolationAngularVelocity(void *c,float* p0); //method: setInterpolationAngularVelocity void ( ::btCollisionObject::* )( ::btVector3 const & ) 
char const * btCollisionObject_serialize(void *c,void* p0,void* p1); //method: serialize char const * ( ::btCollisionObject::* )( void *,::btSerializer * ) const
void btCollisionObject_setWorldTransform(void *c,float* p0); //method: setWorldTransform void ( ::btCollisionObject::* )( ::btTransform const & ) 