Physics/Bullet/Raw/BulletCollision/CollisionDispatch.chs

{#fun btCollisionDispatcher_getNewManifold as btCollisionDispatcher_getNewManifold    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  -- ^ 
, withVoidPtr* `VoidPtr'  -- ^ b0
, withVoidPtr* `VoidPtr'  -- ^ b1
 } ->  `BtPersistentManifold'  mkBtPersistentManifold* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#125>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_dispatchAllCollisionPairs as btCollisionDispatcher_dispatchAllCollisionPairs    `( BtCollisionDispatcherClass bc , BtOverlappingPairCacheClass p0 , BtDispatcherInfoClass p1 , BtDispatcherClass p2 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ pairCache
, withBt* `p1'  -- ^ dispatchInfo
, withBt* `p2'  -- ^ dispatcher
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#121>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_needsCollision as btCollisionDispatcher_needsCollision    `( BtCollisionDispatcherClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#97>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_getManifoldByIndexInternal0 as btCollisionDispatcher_getManifoldByIndexInternal    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `BtPersistentManifold'  mkBtPersistentManifold* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#97>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_getManifoldByIndexInternal0 as btCollisionDispatcher_getManifoldByIndexInternal0    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `BtPersistentManifold'  mkBtPersistentManifold* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#102>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_getManifoldByIndexInternal1 as btCollisionDispatcher_getManifoldByIndexInternal1    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `BtPersistentManifold'  mkBtPersistentManifold* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#62>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_m_collisionConfiguration_set    `( BtCollisionDispatcherClass bc , BtCollisionConfigurationClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#62>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_m_collisionConfiguration_get    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  } ->  `BtCollisionConfiguration'  mkBtCollisionConfiguration* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#52>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_m_defaultManifoldResult_set    `( BtCollisionDispatcherClass bc , BtManifoldResultClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#52>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_m_defaultManifoldResult_get    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  } ->  `BtManifoldResult'  mkBtManifoldResult* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#48>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_m_dispatcherFlags_set    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#48>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_m_dispatcherFlags_get    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#50>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_m_manifoldsPtr_set    `( BtCollisionDispatcherClass bc , BtAlignedObjectArray_btPersistentManifold_ptr_Class a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#50>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_m_manifoldsPtr_get    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  } ->  `BtAlignedObjectArray_btPersistentManifold_ptr_'  mkBtAlignedObjectArray_btPersistentManifold_ptr_* #}
-- * btCollisionObject
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#190>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_new as btCollisionObject    {  } -> `BtCollisionObject' mkBtCollisionObject* #}
{#fun btCollisionObject_free    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#410>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_getCcdSquareMotionThreshold as btCollisionObject_getCcdSquareMotionThreshold    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#255>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_activate as btCollisionObject_activate    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Bool'  -- ^ forceActivation
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#332>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setInterpolationLinearVelocity as btCollisionObject_setInterpolationLinearVelocity    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ linvel
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#332>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setInterpolationLinearVelocity as btCollisionObject_setInterpolationLinearVelocity'    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ linvel
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#274>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_getFriction as btCollisionObject_getFriction    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#367>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setCompanionId as btCollisionObject_setCompanionId    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ id
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#337>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setInterpolationAngularVelocity as btCollisionObject_setInterpolationAngularVelocity    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ angvel
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#337>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setInterpolationAngularVelocity as btCollisionObject_setInterpolationAngularVelocity'    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ angvel
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#447>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_serialize as btCollisionObject_serialize    `( BtCollisionObjectClass bc , BtSerializerClass p1 )' =>     { withBt* `bc'  -- ^ 
, withVoidPtr* `VoidPtr'  -- ^ dataBuffer
, withBt* `p1'  -- ^ serializer
 } ->  `String'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#295>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
{#fun btCollisionObject_setWorldTransform as btCollisionObject_setWorldTransform    `( BtCollisionObjectClass bc )' =>     { withBt* `bc'  -- ^ 
, withTransform* `Transform'  peekTransform* -- ^ worldTrans
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.h?r=2223#295>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp?r=2223>
-}
